load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "gfxstream_host_address_space",
    srcs = [
        "address_space_device.cpp",
        "address_space_graphics.cpp",
    ],
    hdrs = glob(["include/**/*.h"]),
    copts = ["-fno-exceptions"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "//host:gfxstream_backend_headers",
        "//host/logging:gfxstream_host_logging",
        "@aemu//base:aemu-base",
    ],
)
