# File: project_root/src/apigen-codec-common/BUILD

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "apigen-codec-common",
    srcs = [
        "ChecksumCalculator.cpp",
        "ChecksumCalculator.h",
        "ChecksumCalculatorThreadInfo.cpp",
        "ChecksumCalculatorThreadInfo.h",
        "glUtils.cpp",
        "glUtils.h",
    ] + select({
        "@platforms//os:linux": [
            "X11Support.cpp",
            "X11Support.h",
        ],
        "//conditions:default": [],
    }),
    hdrs = glob([
        "GL/**/*.h",
        "X11/**/*.h",
    ]) + [
        "GLDecoderContextData.h",
        "ProtocolUtils.h",
        "gl_base_types.h",
    ],
    copts = ["-fno-exceptions"],
    defines = [
        "EMUGL_BUILD",
        "BUILDING_EMUGL_COMMON_SHARED",
    ],
    includes = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "//common/base:gfxstream_common_base",
        "//common/opengl:gfxstream_opengl_headers",
        "//host/library:gfxstream_host_library",
        "//host/logging:gfxstream_host_logging",
        "@aemu//base:aemu-base",
    ],
)
