load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "gfxstream_host_backend",
    srcs = [
        "display_surface.cpp",
        "display_surface_user.cpp",
        "dma_device.cpp",
        "sync_device.cpp",
        "vm_operations.cpp",
        "window_operations.cpp",
    ],
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "//common/utils:gfxstream_common_utils",
        "//host:gfxstream_backend_headers",
        "//host/logging:gfxstream_host_logging",
    ],
)
