load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//:build_variables.bzl", "GFXSTREAM_HOST_COPTS", "GFXSTREAM_HOST_DEFINES")

package(
    default_applicable_licenses = ["//:gfxstream_license"],
    default_visibility = ["//:gfxstream"],
)

cc_library(
    name = "gfxstream_host_compressed_textures",
    srcs = [
        "AstcCpuDecompressorNoOp.cpp",
    ],
    hdrs = glob(["include/**/*.h"]),
    copts = GFXSTREAM_HOST_COPTS,
    defines = GFXSTREAM_HOST_DEFINES,
    strip_include_prefix = "include",
    deps = [
        "//common/etc:gfxstream_etc",
    ],
)

cc_test(
    name = "gfxstream_host_compressed_textures_unittests",
    srcs = [
        "AstcCpuDecompressor_unittest.cpp",
    ],
    copts = GFXSTREAM_HOST_COPTS,
    deps = [
        ":gfxstream_host_compressed_textures",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)
