load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "gfxstream_host_decoder_common",
    srcs = [
        "ChecksumCalculator.cpp",
        "ChecksumCalculatorThreadInfo.cpp",
        "glUtils.cpp",
    ] + select({
        "@platforms//os:linux": [
            "X11Support.cpp",
        ],
        "//conditions:default": [],
    }),
    hdrs = glob([
        "GL/**/*.h",
        "X11/**/*.h",
        "include/**/*.h",
    ]),
    copts = ["-fno-exceptions"],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "//common/base:gfxstream_common_base",
        "//common/opengl:gfxstream_opengl_headers",
        "//host:gfxstream_backend_headers",
        "//host/library:gfxstream_host_library",
        "//host/logging:gfxstream_host_logging",
    ],
)
