load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//:gfxstream"],
)

cc_library(
    name = "gfxstream_host_decoder_common",
    srcs = [
        "ChecksumCalculator.cpp",
        "ChecksumCalculatorThreadInfo.cpp",
        "glUtils.cpp",
    ] + select({
        "@platforms//os:linux": [
            "X11Support.cpp",
        ],
        "//conditions:default": [],
    }),
    hdrs = glob([
        "include/**/*.h",
    ]),
    copts = ["-fno-exceptions"],
    includes = [
        ".",
        "include",
    ],
    deps = [
        "//common/base:gfxstream_common_base",
        "//common/logging:gfxstream_common_logging",
        "//host:gfxstream_backend_headers",
        "//host/library:gfxstream_host_library",
        "//third_party/opengl:gfxstream_opengl_headers",
        "//third_party/x11:gfxstream_x11_headers",
    ],
)
